--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Happy Birthday Sekar Hadi Sangadji</title>
+  <title>Dirgahayu, Sekarhadi Sangadji!</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.5.0/balloon.min.css">
@@ -28,25 +28,24 @@
     <div id="card-inside">
       <div class="wrap wishesFont">
         <center>
-          <p>Selamat Ulang Tahun, Sekar Hadi Sangadji!</p>
           <p>
-            Semoga hari istimewa ini penuh dengan kebahagiaan, cinta, dan keberuntungan. Semoga setiap langkah dalam
-            perjalanan hidupmu dipenuhi dengan prestasi dan keberhasilan. Teruslah bersinar terang seperti bintang yang
-            selalu bersinar di malam hari. Semoga tahun ini membawa banyak kenangan indah dan momen-momen berharga yang
-            tak terlupakan. Selamat ulang tahun yang luar biasa!
+            Dirgahayu, Sekarhadi Sangadji! <br>
+            Hallo Sekar! Dirgahayu yang ke-28 Sekarhadi Sangadji.
+            Semoga diumur yang istimewa ini penuh dengan kebahagiaan, cinta, dan keberuntungan.
+            Semoga setiap langkah dalam perjalanan hidupmu dipenuhi dengan prestasi dan keberhasilan.
+            Teruslah bersinar terang seperti bintang yang selalu bersinar di malam hari.
+            Semoga tahun ini membawa banyak kenangan indah dan momen-momen berharga yang tak terlupakan.
+            Selamat ulang tahun yang luar biasa! Semoga harapanmu terwujud dan kebahagiaan selalu menyertaimu dan keluarga.
 
             Semoga harapanmu terwujud dan kebahagiaan selalu menyertaimu.
           </p>
         </center>
-        <p class="signed">Wishing you a very Happy Birthday Sekar Hadi Sangadji! May god bless you.
-          <br> Keep Smile Sekar Hadi Sangadji!
-        </p>
-
+        <p class="signed">Wishing you a very Happy Birthday Sekarhadi Sangadji! May god bless you. Keep Smile Sekarhadi Sangadji!</p>
       </div>
     </div>
     <div id="card-front">
       <div class="wrap">
-        <h1>Happy Birthday</h1>
+        <h1>Dirgahayu, Sekarhadi</h1>
         <div class="cake_and_velas">
           <div class="velas">
             <div class="fuego"></div>
@@ -98,14 +97,14 @@
           </svg>
         </div>
       </div>
-      <button id="open" data-balloon="Click to Open Card!" data-balloon-length="medium" data-balloon-pos="left"
+      <button id="open" data-balloon="Click untuk Buka!" data-balloon-length="medium" data-balloon-pos="left"
         data-balloon-visible>&gt;</button>
       <button id="close" data-balloon="! bɿɒɔ ɘƨolɔ oɈ ʞɔilƆ" data-balloon-length="medium" data-balloon-pos="left"
         data-balloon-visible>&lt;</button>
       <div class="card-front_inside">
         <br> <br> <br>
         <div class="polaroid">
-          <div class="img" style="background-image: url('file.jpeg')"></div>
+          <div class="img" style="background-image: url('file.jpg')"></div>
         </div>
         <div class="shadow"></div>
       </div>
